--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,3 +1,17 @@
+.tab-bar {
+    display: flex;
+}
+
+.tab {
+    width: 100%;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.tab-content {
+    text-align: center;
+}
+
 .list {
     border: 1px solid black;
     width: 100%;
@@ -17,4 +31,5 @@
 
 .selected {
     background-color: rgb(69, 174, 200);
+    color: white;
 }
