--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -14,12 +14,18 @@
 
 .list {
     border: 1px solid black;
-    width: 100%;
-    height: 200px;
+    height: 800px;
     overflow: auto;
+    margin: 20px 0;
+    padding: 10px;
+}
+
+.list img {
+    width: 200px;
 }
 
 .paginator {
+    text-align: center;
     width: 100%;
     height: 50px;
 }
